--- a/app/layout/nav.jade
+++ b/app/layout/nav.jade
@@ -11,7 +11,7 @@ block vars
         a.item(href="/#{lang}/about.html", translate="MENU_ABOUTG0V")
           | 關於 g0v
         a.item(href="/#{lang}/manifesto.html", translate="MENU_MANIFESTO")
-          | 零時政府宣言
+          | 開放文化基金會宣言
           i.external.url.right.icon
 
         a.item(href="/#{lang}/community.html", translate="MENU_COMMUNITY")
@@ -26,7 +26,7 @@ block vars
         a.item(href="/#{lang}/projects.html", translate="MENU_LIST")
           span(translate="MENU_LIST") 成果列表
           i.external.url.right.icon
-        //a.item(target="blank",href="http://hack.g0v.tw/project")
+        //a.item(target="blank",href="http://hack.ocf.tw/project")
           span(translate="MENU_PROGRESS") 開發中專案
           i.external.url.right.icon
         a.item(target="blank",href="https://g0v.hackpad.com/", )
@@ -35,7 +35,7 @@ block vars
         //a.item(target="blank",href="http://g0v.github.io/g0vis/#!/project/1")
           span(translate="MENU_VISUAL") 專案貢獻者
           i.external.url.right.icon
-        a.item(target="blank",href="http://data.g0v.tw")
+        a.item(target="blank",href="http://data.ocf.tw")
           span(translate="MENU_OPENDATA") g0v資料開放平臺
           i.external.url.right.icon
     .ui.pointing.dropdown.link.item(class="#{nav_cls.join}")
@@ -59,10 +59,10 @@ block vars
           | 社群分享
         a.item(href="/#{lang}/communique.html", translate="MENU_COMMUNIQUE")
           | g0v 公報
-        a.item(href="http://blog.g0v.tw")
+        a.item(href="http://blog.ocf.tw")
           span(translate="MENU_BLOG") g0v 部落格
           i.external.url.right.icon
-        a.item(target="blank" href="http://logbot.g0v.tw", translate="MENU_LOGBOT")
+        a.item(target="blank" href="http://logbot.ocf.tw", translate="MENU_LOGBOT")
           | IRC log
           i.external.url.right.icon
     .ui.pointing.dropdown.link.item(class="#{nav_cls.actinfo}")
