--- a/app/partials/about.jade
+++ b/app/partials/about.jade
@@ -8,7 +8,7 @@ block vars
 
 block content
   .ui.teal.segment
-    .ui.label.black.ribbon.large(translate="ABOUT_G0V") 關於零時政府
+    .ui.label.black.ribbon.large(translate="ABOUT_G0V") 關於開放文化基金會
     case lang
       when 'en-US'
         include:md ../../md/en-us/about/about.md
