--- a/app/partials/actrecord.jade
+++ b/app/partials/actrecord.jade
@@ -28,9 +28,9 @@ block content
             p.name4 g0v 社群與資料科學愛好者年會共同舉辦，是 g0v 第一次與其他團體合辦大型黑客松，也是首次連續兩天的活動。兩日成果於國際會議廳以閃電秀形式發表。
             p
             i.edit.medium.icon
-            a(href="http://hack.g0v.tw/g0v-hackath10n", target="_blank") 共筆
+            a(href="http://hack.ocf.tw/g0v-hackath10n", target="_blank") 共筆
             i.camera.medium.icon
-            a(href="http://hack.g0v.tw") 照片
+            a(href="http://hack.ocf.tw") 照片
             p
             i.youtube.medium.icon
             a(href="https://www.youtube.com/playlist?list=PLdwQWxpS513AIbqa0WJ_jtoYG5XwltUBk", target="_blank") 開幕提案
@@ -47,9 +47,9 @@ block content
             p.name4 g0v 社群與資料科學愛好者年會共同舉辦，是 g0v 第一次與其他團體合辦大型黑客松，也是首次連續兩天的活動。兩日成果於國際會議廳以閃電秀形式發表。
             p
             i.edit.medium.icon
-            a(href="http://hack.g0v.tw/g0v-hackath9n", target="_blank") 共筆
+            a(href="http://hack.ocf.tw/g0v-hackath9n", target="_blank") 共筆
             i.photo.medium.icon
-            a(href="http://hack.g0v.tw", target="_blank") 照片
+            a(href="http://hack.ocf.tw", target="_blank") 照片
             p
             i.youtube.medium.icon
             a(href="https://www.youtube.com/playlist?list=PLdwQWxpS513DbZEAbqv8Yp43AkYGSgzaX", target="_blank") 開幕提案
@@ -67,9 +67,9 @@ block content
             p.name4 g0v 社群與資料科學愛好者年會共同舉辦，是 g0v 第一次與其他團體合辦大型黑客松，國際會議廳以閃電秀形式發表。
             p
             i.edit.medium.icon
-            a(href="http://hack.g0v.tw/g0v-hackath8n", target="_blank") 共筆
+            a(href="http://hack.ocf.tw/g0v-hackath8n", target="_blank") 共筆
             i.photo.medium.icon
-            a(href="http://hack.g0v.tw") 照片
+            a(href="http://hack.ocf.tw") 照片
             p
             i.youtube.medium.icon
             a(href="https://www.youtube.com/playlist?list=PLdwQWxpS513DbZEAbqv8Yp43AkYGSgzaX", target="_blank") 開幕提案
@@ -90,7 +90,7 @@ block content
             p
             p
             i.edit.medium.icon
-            a(href="http://hack.g0v.tw/g0v-hackath7n", target="_blank") 共筆
+            a(href="http://hack.ocf.tw/g0v-hackath7n", target="_blank") 共筆
             p
             i.youtube.medium.icon
             a(href="https://www.youtube.com/playlist?list=PLdwQWxpS513DbZEAbqv8Yp43AkYGSgzaX", target="_blank") 開幕提案
@@ -100,7 +100,7 @@ block content
             a(href="https://www.youtube.com/playlist?list=PLdwQWxpS513CJHIEaM4wK2V1CFOyLAb8B", target="_blank") 成果閉幕
             p
             i.photo.medium.icon
-            a(href="http://hack.g0v.tw") 照片
+            a(href="http://hack.ocf.tw") 照片
 
         .item
           .content
@@ -111,7 +111,7 @@ block content
             p.name4 g0v 社群與資料科學愛好者年會共同舉辦，是 g0v 第一次與其他團體合辦大型黑客松，也是首次連續兩天的活動。兩日成果於國際會議廳以閃電秀形式發表。
             p
             i.edit.medium.icon
-            a(href="http://hack.g0v.tw/g0v-hackath6n", target="_blank") 共筆
+            a(href="http://hack.ocf.tw/g0v-hackath6n", target="_blank") 共筆
             p
             i.youtube.medium.icon
             a(href="https://www.youtube.com/playlist?list=PLdwQWxpS513DbZEAbqv8Yp43AkYGSgzaX", target="_blank") 開幕提案
@@ -121,7 +121,7 @@ block content
             a(href="https://www.youtube.com/playlist?list=PLdwQWxpS513CJHIEaM4wK2V1CFOyLAb8B", target="_blank") 成果閉幕
             p
             i.photo.medium.icon
-            a(href="http://hack.g0v.tw") 照片
+            a(href="http://hack.ocf.tw") 照片
         .item
           .content
             .meta 2013/10/20
@@ -131,7 +131,7 @@ block content
             p.name4 g0v 社群與資料科學愛好者年會共同舉辦，是 g0v 第一次與其他團體合辦大型黑客松，也是首次連續兩天的活動。兩日成果於國際會議廳以閃電秀形式發表。
             p
             i.edit.medium.icon
-            a(href="http://hack.g0v.tw/g0v-hackath5n", target="_blank") 共筆
+            a(href="http://hack.ocf.tw/g0v-hackath5n", target="_blank") 共筆
             p
             i.youtube.medium.icon
             a(href="https://www.youtube.com/playlist?list=PLdwQWxpS513DbZEAbqv8Yp43AkYGSgzaX", target="_blank") 開幕提案
@@ -141,7 +141,7 @@ block content
             a(href="https://www.youtube.com/playlist?list=PLdwQWxpS513CJHIEaM4wK2V1CFOyLAb8B", target="_blank") 成果閉幕
             p
             i.photo.medium.icon
-            a(href="http://hack.g0v.tw") 照片
+            a(href="http://hack.ocf.tw") 照片
         .item
           .content
             .meta 2013/8/10
@@ -151,7 +151,7 @@ block content
             p.name4 g0v 社群與資料科學愛好者年會共同舉辦，是 g0v 第一次與其他團體合辦大型黑客松，也是首次連續兩天的活動。兩日成果於國際會議廳以閃電秀形式發表。
             p
             i.edit.medium.icon
-            a(href="http://hack.g0v.tw/g0v-hackath4n", target="_blank") 共筆
+            a(href="http://hack.ocf.tw/g0v-hackath4n", target="_blank") 共筆
             p
             i.youtube.medium.icon
             a(href="https://www.youtube.com/playlist?list=PLdwQWxpS513DbZEAbqv8Yp43AkYGSgzaX", target="_blank") 開幕提案
@@ -161,7 +161,7 @@ block content
             a(href="https://www.youtube.com/playlist?list=PLdwQWxpS513CJHIEaM4wK2V1CFOyLAb8B", target="_blank") 成果閉幕
             p
             i.photo.medium.icon
-            a(href="http://hack.g0v.tw") 照片
+            a(href="http://hack.ocf.tw") 照片
         .item
           .content
             .meta 2013/6/6
@@ -171,7 +171,7 @@ block content
             p.name4 g0v 社群與資料科學愛好者年會共同舉辦，是 g0v 第一次與其他團體合辦大型黑客松，也是首次連續兩天的活動。兩日成果於國際會議廳以閃電秀形式發表。
             p
             i.edit.medium.icon
-            a(href="http://hack.g0v.tw/g0v-hackath3n", target="_blank") 共筆
+            a(href="http://hack.ocf.tw/g0v-hackath3n", target="_blank") 共筆
             p
             i.youtube.medium.icon
             a(href="https://www.youtube.com/playlist?list=PLdwQWxpS513DbZEAbqv8Yp43AkYGSgzaX", target="_blank") 開幕提案
@@ -181,7 +181,7 @@ block content
             a(href="https://www.youtube.com/playlist?list=PLdwQWxpS513CJHIEaM4wK2V1CFOyLAb8B", target="_blank") 成果閉幕
             p
             i.photo.medium.icon
-            a(href="http://hack.g0v.tw") 照片
+            a(href="http://hack.ocf.tw") 照片
         .item
           .content
             .meta 2013/3/23
@@ -191,7 +191,7 @@ block content
             p.name4 g0v 社群與資料科學愛好者年會共同舉辦，是 g0v 第一次與其他團體合辦大型黑客松，也是首次連續兩天的活動。兩日成果於國際會議廳以閃電秀形式發表。
             p
             i.edit.medium.icon
-            a(href="http://hack.g0v.tw/g0v-hackath2n", target="_blank") 共筆
+            a(href="http://hack.ocf.tw/g0v-hackath2n", target="_blank") 共筆
             p
             i.youtube.medium.icon
             a(href="https://www.youtube.com/playlist?list=PLdwQWxpS513DbZEAbqv8Yp43AkYGSgzaX", target="_blank") 開幕提案
@@ -201,7 +201,7 @@ block content
             a(href="https://www.youtube.com/playlist?list=PLdwQWxpS513CJHIEaM4wK2V1CFOyLAb8B", target="_blank") 成果閉幕
             p
             i.photo.medium.icon
-            a(href="http://hack.g0v.tw") 照片
+            a(href="http://hack.ocf.tw") 照片
 
         .item
           .content
@@ -212,7 +212,7 @@ block content
             p.name4 g0v 社群與資料科學愛好者年會共同舉辦，是 g0v 第一次與其他團體合辦大型黑客松，也是首次連續兩天的活動。兩日成果於國際會議廳以閃電秀形式發表。
             p
             i.edit.medium.icon
-            a(href="http://hack.g0v.tw/g0v-hackath1n", target="_blank") 共筆
+            a(href="http://hack.ocf.tw/g0v-hackath1n", target="_blank") 共筆
             p
             i.youtube.medium.icon
             a(href="https://www.youtube.com/playlist?list=PLdwQWxpS513DbZEAbqv8Yp43AkYGSgzaX", target="_blank") 開幕提案
@@ -222,7 +222,7 @@ block content
             a(href="https://www.youtube.com/playlist?list=PLdwQWxpS513CJHIEaM4wK2V1CFOyLAb8B", target="_blank") 成果閉幕
             p
             i.photo.medium.icon
-            a(href="http://hack.g0v.tw") 照片
+            a(href="http://hack.ocf.tw") 照片
 
         .item
           .content
@@ -233,7 +233,7 @@ block content
             p.name4 g0v 社群與資料科學愛好者年會共同舉辦，是 g0v 第一次與其他團體合辦大型黑客松，也是首次連續兩天的活動。兩日成果於國際會議廳以閃電秀形式發表。
             p
             i.edit.medium.icon
-            a(href="http://hack.g0v.tw/g0v-hackath0n", target="_blank") 共筆
+            a(href="http://hack.ocf.tw/g0v-hackath0n", target="_blank") 共筆
             p
             i.youtube.medium.icon
             a(href="https://www.youtube.com/playlist?list=PLdwQWxpS513DbZEAbqv8Yp43AkYGSgzaX", target="_blank") 開幕提案
@@ -243,7 +243,7 @@ block content
             a(href="https://www.youtube.com/playlist?list=PLdwQWxpS513CJHIEaM4wK2V1CFOyLAb8B", target="_blank") 成果閉幕
             p
             i.photo.medium.icon
-            a(href="http://hack.g0v.tw") 照片
+            a(href="http://hack.ocf.tw") 照片
 
   h2.header
     .content
@@ -257,7 +257,7 @@ block content
             img.hack.ui.floated.image(src='https://dl.dropboxusercontent.com/u/16853724/hackath10n.png')
             p
             i.edit.medium.icon
-            a(href="http://hack.g0v.tw/g0v-hackath10n", target="_blank") 共筆
+            a(href="http://hack.ocf.tw/g0v-hackath10n", target="_blank") 共筆
             i.youtube.medium.icon
             a(href="https://www.youtube.com/playlist?list=PLdwQWxpS513AIbqa0WJ_jtoYG5XwltUBk", target="_blank") 開幕提案
             i.youtube.medium.icon
@@ -266,7 +266,7 @@ block content
             a(href="https://www.youtube.com/playlist?list=PLdwQWxpS513CiFPEfWwH6WS-qiy3wkhE4", target="_blank") 成果閉幕
 
             i.camera.medium.icon
-            a(href="http://hack.g0v.tw") 照片
+            a(href="http://hack.ocf.tw") 照片
 
         .item
           .content
@@ -275,7 +275,7 @@ block content
             p
             img.hack.ui.floated.image(src='https://dl.dropboxusercontent.com/u/16853724/hackath9n.png')
             i.edit.medium.icon
-            a(href="http://hack.g0v.tw/g0v-hackath9n", target="_blank") 共筆
+            a(href="http://hack.ocf.tw/g0v-hackath9n", target="_blank") 共筆
             i.youtube.medium.icon
             a(href="https://www.youtube.com/playlist?list=PLdwQWxpS513DbZEAbqv8Yp43AkYGSgzaX", target="_blank") 開幕提案
             i.youtube.medium.icon
@@ -284,7 +284,7 @@ block content
             a(href="https://www.youtube.com/playlist?list=PLdwQWxpS513CJHIEaM4wK2V1CFOyLAb8B", target="_blank") 成果閉幕
 
             i.photo.medium.icon
-            a(href="http://hack.g0v.tw", target="_blank") 照片
+            a(href="http://hack.ocf.tw", target="_blank") 照片
 
         .item
           .content
@@ -295,7 +295,7 @@ block content
             a(href="https://www.youtube.com/playlist?list=PLdwQWxpS513CJHIEaM4wK2V1CFOyLAb8B", target="_blank") 成果閉幕
             p
             i.photo.medium.icon
-            a(href="http://hack.g0v.tw") 照片
+            a(href="http://hack.ocf.tw") 照片
   h2.header
     .content
       | 教學課程
@@ -311,7 +311,7 @@ block content
             a(href="hhttp://hack.etblue.tw/learners", target="_blank") 共筆與教材
             i.youtube.medium.icon
             i.edit.medium.icon
-            a(href="http://hack.g0v.tw/g0v-hackath8n", target="_blank") 共筆
+            a(href="http://hack.ocf.tw/g0v-hackath8n", target="_blank") 共筆
             i.youtube.medium.icon
             a(href="https://www.youtube.com/playlist?list=PLdwQWxpS513DbZEAbqv8Yp43AkYGSgzaX", target="_blank") 開幕提案
             i.youtube.medium.icon
