--- a/app/partials/projects.jade
+++ b/app/partials/projects.jade
@@ -24,7 +24,7 @@ block content
   div#projects_right_container
     h1.ui.huge.header.center.aligned
       .content
-        | 零時政府促成了哪些專案？
+        | 開放文化基金會促成了哪些專案？
         .sub.header 多項專案持續彙整中......
 
     .ui.horizontal.divider
@@ -50,7 +50,7 @@ block content
                 p
                 .name2 專案網址
                 p.description
-                  a(href="http://budget.g0v.tw" target="_blank") budget.g0v.tw
+                  a(href="http://budget.ocf.tw" target="_blank") budget.ocf.tw
             .item
               .content
                 .name 國會大代誌
@@ -64,7 +64,7 @@ block content
                 p
                 .name2 專案網址
                 p.description
-                  a(href="http://ly.g0v.tw" target="_blank") ly.g0v.tw
+                  a(href="http://ly.ocf.tw" target="_blank") ly.ocf.tw
                 p
                 .name2 意見回饋
                 p.description
@@ -82,7 +82,7 @@ block content
                 p
                 .name2 專案網址
                 p.description
-                  a(href="http://ivod.ly.g0v.tw" target="_blank") ivod.ly.g0v.tw
+                  a(href="http://ivod.ly.ocf.tw" target="_blank") ivod.ly.ocf.tw
                 p
                 .name2 意見回饋
                 p.description
@@ -100,7 +100,7 @@ block content
                 p
                 .name2 專案網址
                 p.description
-                  a(href="http://ivod.ly.g0v.tw" target="_blank") ivod.ly.g0v.tw
+                  a(href="http://ivod.ly.ocf.tw" target="_blank") ivod.ly.ocf.tw
                 p
                 .name2 意見回饋
                 p.description
@@ -121,7 +121,7 @@ block content
                 p
                 .name2 加入行動
                 p.description
-                  a(href="http://hack.g0v.tw/g0v-cy" target="_blank") 行動本部共筆
+                  a(href="http://hack.ocf.tw/g0v-cy" target="_blank") 行動本部共筆
             .item
               .content
                 .name 立委投票指南
@@ -132,7 +132,7 @@ block content
                 p
                 .name2 專案網址
                 p.description
-                  a(href="http://vote.ly.g0v.tw" target="_blank") vote.ly.g0v.tw
+                  a(href="http://vote.ly.ocf.tw" target="_blank") vote.ly.ocf.tw
                 p
                 .name2 意見回饋
                 p.description
@@ -150,7 +150,7 @@ block content
                 p
                 .name2 專案網址
                 p.description
-                  a(href="http://councils.g0v.tw" target="_blank") councils.g0v.tw
+                  a(href="http://councils.ocf.tw" target="_blank") councils.ocf.tw
                 p
                 .name2 意見回饋
                 p.description
@@ -167,7 +167,7 @@ block content
                 p
                 .name2 專案網址
                 p.description
-                  a(href="http://report.nat.g0v.tw/" target="_blank") report.nat.g0v.tw
+                  a(href="http://report.nat.ocf.tw/" target="_blank") report.nat.ocf.tw
 
 
     .ui.horizontal.divider
@@ -192,7 +192,7 @@ block content
                 p
                 .name2 專案網址
                 p.description
-                  a(href="http://data.g0v.tw" target="_blank") data.g0v.tw
+                  a(href="http://data.ocf.tw" target="_blank") data.ocf.tw
           .item
               .content
                 .ui.right.corner.label.red
@@ -206,7 +206,7 @@ block content
                 p
                 .name2 專案網址
                 p.description
-                  a(href="http://local.data.g0v.tw" target="_blank") local.data.g0v.tw
+                  a(href="http://local.data.ocf.tw" target="_blank") local.data.ocf.tw
           .item
               .content
                 .name 萌典
@@ -239,7 +239,7 @@ block content
                 p
                 .name2 專案網址
                 p.description
-                  a(href="http://er.mohw.g0v.tw" target="_blank") er.mohw.g0v.tw
+                  a(href="http://er.mohw.ocf.tw" target="_blank") er.mohw.ocf.tw
                 p
                 .name2 意見回饋
                 p.description
@@ -294,7 +294,7 @@ block content
                 p
                 .name2 專案網址
                 p.description
-                  a(href="http://env.g0v.tw/" target="_blank") env.g0v.tw
+                  a(href="http://env.ocf.tw/" target="_blank") env.ocf.tw
           .item
               .content
                 .name petneedme
@@ -319,7 +319,7 @@ block content
                 p
                 .name2 專案網址
                 p.description
-                  a(href="https://tisa.g0v.tw" target="_blank") tisa.g0v.tw
+                  a(href="https://tisa.ocf.tw" target="_blank") tisa.ocf.tw
           .item
               .content
                 .name 自經區正反意見比較表
@@ -444,7 +444,7 @@ block content
                 p
                 .name2 專案網址
                 p.description
-                  a(href="http://newshelper.g0v.tw/" target="_blank") newshelper.g0v.tw、
+                  a(href="http://newshelper.ocf.tw/" target="_blank") newshelper.ocf.tw、
                   a(href="https://www.facebook.com/newshelper" target="_blank") facebook 專頁
 
           .item
@@ -458,7 +458,7 @@ block content
                 p
                 .name2 專案網址
                 p.description
-                  a(href="http://fact.g0v.tw" target="_blank") fact.g0v.tw
+                  a(href="http://fact.ocf.tw" target="_blank") fact.ocf.tw
 
           .item
               .content
@@ -528,11 +528,11 @@ block content
                 p
                 .name2 專案網址
                 p.description
-                  //a(href="http://data.g0v.tw" target="_blank") data.ly.g0v.tw
+                  //a(href="http://data.ocf.tw" target="_blank") data.ly.ocf.tw
                 p
                 .name2 意見回饋
                 p.description
-                  //a(href="http://data.g0v.tw" target="_blank") data.ly.g0v.tw
+                  //a(href="http://data.ocf.tw" target="_blank") data.ly.ocf.tw
           .item
               .content
                 .name 開放資料政策社群意見
@@ -544,11 +544,11 @@ block content
                 p
                 .name2 專案網址
                 p.description
-                  //a(href="http://data.g0v.tw" target="_blank") data.ly.g0v.tw
+                  //a(href="http://data.ocf.tw" target="_blank") data.ly.ocf.tw
                 p
                 .name2 意見回饋
                 p.description
-                  //a(href="http://data.g0v.tw" target="_blank") data.ly.g0v.tw
+                  //a(href="http://data.ocf.tw" target="_blank") data.ly.ocf.tw
 
 
     .ui.horizontal.divider
@@ -585,7 +585,7 @@ block content
                 p
                 .name2 專案網址
                 p.description
-                  a(href="http://8bit.g0v.tw/" target="_blank") 8bit.g0v.tw
+                  a(href="http://8bit.ocf.tw/" target="_blank") 8bit.ocf.tw
 
           .item
               .content
@@ -598,7 +598,7 @@ block content
                 p
                 .name2 專案網址
                 p.description
-                  a(href="http://axe.g0v.tw/" target="_blank") axe.g0v.tw
+                  a(href="http://axe.ocf.tw/" target="_blank") axe.ocf.tw
 
           .item
               .content
@@ -649,4 +649,4 @@ block content
                 p
                 .name2 演講資訊
                 p.description
-                  a(href="http://g0v.tw/talk.html" target="_blank") g0v.tw/talk
+                  a(href="http://ocf.tw/talk.html" target="_blank") ocf.tw/talk
