--- a/app/partials/talk.jade
+++ b/app/partials/talk.jade
@@ -51,7 +51,7 @@ block content
           .item
             .content
               .meta UDN talk 聯合大講堂．2014/9/16
-              .name3 資料、社群、大協作 - 零時政府的數位革命
+              .name3 資料、社群、大協作 - 開放文化基金會的數位革命
               iframe(width='288', height='216', src='http://www.youtube.com/embed/diEXolZicsw', frameborder='0', allowfullscreen='allowfullscreen')
               p.name2 講者：高嘉良
               p.name2
@@ -60,7 +60,7 @@ block content
           .item
             .content
               .meta 漢字產業創意工作坊．2014/7/26
-              .name3 萌典與零時政府
+              .name3 萌典與開放文化基金會
               iframe(width='288', height='216', src='http://www.youtube.com/embed/iW5x5wkyQTU', frameborder='0', allowfullscreen='allowfullscreen')
               p.name2 講者：唐鳳
               p.name2
@@ -105,7 +105,7 @@ block content
           .item
             .content
               .meta OSDC．2014/4/12
-              .name3 零時政府的第一年
+              .name3 開放文化基金會的第一年
               iframe(width='288', height='216', src='http://www.youtube.com/embed/GwIMe3MNQ_Q', frameborder='0', allowfullscreen='allowfullscreen')
               p.name2 講者：唐鳳
               p.name2
@@ -150,7 +150,7 @@ block content
           .item
             .content
               .meta 不要核四、五六運動．2013/12/27
-              .name3 『公民論壇』g0v零時政府
+              .name3 『公民論壇』g0v開放文化基金會
               iframe(width='288', height='216', src='http://www.youtube.com/embed/IB5H-RzcbDk', frameborder='0', allowfullscreen='allowfullscreen')
               p.name2 講者：楊孝先
           .item
@@ -167,7 +167,7 @@ block content
               p.name2 講者：瞿筱葳
               p.name2
                 | ☞
-                a(href='http://blog.g0v.tw/posts/60348667148/g0v-tw', target="_blank")  逐字稿
+                a(href='http://blog.ocf.tw/posts/60348667148/g0v-tw', target="_blank")  逐字稿
           .item
             .content
               .meta COSCUP．2013/8/3
