--- a/app/index.jade
+++ b/app/index.jade
@@ -3,10 +3,10 @@ html
   head
     meta(charset="utf8")
     meta(http-equiv="refresh",content="3; url=/en-US/")
-    //meta(property="og:url",content="http://g0v.tw/")
-    meta(property="og:title",content="g0v.tw")
+    //meta(property="og:url",content="http://ocf.tw/")
+    meta(property="og:title",content="ocf.tw")
     meta(property="og:type",content="website")
-    meta(property="og:image",content="http://g0v.tw/imgs/g0v-2line-white-s.jpg")
+    meta(property="og:image",content="http://ocf.tw/imgs/g0v-2line-white-s.jpg")
     script(type="text/javascript").
       (function(){
         var pathname = window.location.pathname
