--- a/app/partials/links.jade
+++ b/app/partials/links.jade
@@ -8,7 +8,7 @@ block vars
 
 block content
   .ui.teal.segment
-    .ui.orange.ribbon.label(translate="LINKS") 零時政府相關連結
+    .ui.orange.ribbon.label(translate="LINKS") 開放文化基金會相關連結
     case lang
       when 'en-US'
         include:md ../../md/en-us/join/links.md
